# mcgill.courses

./: .env.dev.example  .env.example  .env.prod.example  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc.json  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  README.md  bun.lockb  cypress.config.js  docker-compose.yml  hash.txt  hk.pkl  jest.config.js  justfile  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  tailwind.config.cjs  tsconfig.json  tsconfig.node.json  tslint.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yaml
.husky/: pre-commit  pre-push
.well-known/: microsoft-identity-association.json
automation/: Cargo.toml  checkout
client/: .env.dev.example  .env.prod.example  index.html  postcss.config.cjs  tailwind.config.cjs  tsconfig.json  vite.config.ts
client/public/: site.webmanifest
client/src/: App.css  App.tsx  index.css  main.tsx  vite-env.d.ts
client/src/assets/: buildingCodes.json  buildingCoordinates.json  changelog.json  course-codes.json  courseAveragesData.json  final-exams.json  search-data.json  searchData.json
client/src/components/: AddReviewForm.tsx  Alert.tsx  AuthProvider.tsx  Autocomplete.tsx  BirdIcon.tsx  BoxToggle.tsx  BuildingLocation.tsx  CourseAverages.tsx  CourseCard.test.tsx  CourseCard.tsx  CourseGraph.tsx  CourseInfo.tsx  CourseInfoStats.tsx  CourseRequirements.tsx  CourseReview.tsx  CourseReviewPrompt.tsx  CourseSearchBar.tsx  CourseTerms.tsx  DarkModeToggle.tsx  DeleteButton.tsx  EditReviewForm.tsx  ErrorPage.tsx  ExploreFilter.tsx  Fillbar.tsx  Footer.tsx  Highlight.tsx  Histogram.tsx  IconRating.tsx  IconRatingInput.tsx  JumpToTopButton.tsx  Layout.tsx  Logo.tsx  MultiSelect.tsx  NavItem.tsx  Navbar.tsx  NotFound.tsx  NotificationBox.tsx  NotificationDropdown.tsx  Paragraph.tsx  PrivateRoute.tsx  (+77 more)
client/src/hooks/: api-hooks.ts  api.ts  use-auth.ts  use-dark-mode.ts  use-explore-filter-state.ts  use-media-query.ts  useAuth.ts  useDarkMode.ts  useExploreFilterState.ts  useMediaQuery.ts
client/src/lib/: api.ts  calendar.ts  constants.ts  dom-utils.tsx  env.ts  fetchClient.ts  model.ts  repo.ts  search-index.test.ts  search-index.ts  searchIndex.ts  types.ts  uniqueTermInstructors.ts  utils.test.ts  utils.ts  utils.tsx
client/src/model/: Course.ts  GetCoursePayload.ts  GetCourseReviewsInteractionsPayload.ts  GetCourseWithReviewsPayload.ts  GetCoursesPayload.ts  Like.ts  (+25 more)
crates/combine/: Cargo.toml
crates/db/: Cargo.toml
crates/db/seeds/: after.json  after_update.json  before.json  before_update.json  mini.json  mix.json  search.json  update.json
crates/db/src/: collector.rs  combine.rs  db.rs  error.rs  initializer.rs  lib.rs  seed.rs  seeder.rs  str_ext.rs  utils.rs  vec_ext.rs
crates/db/test-seeds/: after_update.json  before_update.json  mini.json  mix.json  search.json  update.json
crates/extractor/: Cargo.toml
crates/extractor/llm_data/: example.txt
crates/extractor/mocks/: course_page_2022_2023.html  course_page_with_amp.html
crates/extractor/python/: gpt_parser.py
crates/extractor/src/: catalog_extractor.rs  course_listing_ext.rs  course_page.rs  course_page_ext.rs  courses.rs  ecalendar_extractor.rs  element.rs  extract.rs  lib.rs  req_parser.rs  requirement.rs  requirements.rs  requirements_ext.rs  schedule.rs  schedule_ext.rs  select.rs  utils.rs  vsb_extractor.rs
crates/extractor/storage/: docstore.json  index_store.json  vector_store.json
crates/extractor/test-samples/: catalog_all_courses.html  catalog_course_page_2025_2026.html  course_page_2009_2010.html  ecalendar_course_listings_2009_2010.html  vsb_course_schedules_202509.xml
crates/model/: Cargo.toml
crates/model/src/: course.rs  course_filter.rs  course_listing.rs  course_page.rs  datetime.rs  initialize_options.rs  instructor.rs  interaction.rs  lib.rs  like.rs  notification.rs  requirements.rs  review.rs  review_filter.rs  schedule.rs  search_results.rs  seed_options.rs  subscription.rs
crates/scraper/: Cargo.toml
crates/scraper/src/: catalogue.rs  main.rs  retry.rs  vsb.rs
cypress/e2e/: spec.cy.ts
cypress/fixtures/: user.json
docs/: MAINTENANCE.md
mocks/: course_schedules.xml  listings.html
src/: arguments.rs  assets.rs  auth.rs  config.rs  course.rs  course_listing.rs  course_page.rs  courses.rs  db.rs  documentation.rs  env.rs  error.rs  extraction_mode.rs  extractor.rs  hash.rs  instructor.rs  instructors.rs  interactions.rs  likes.rs  loader.rs  main.rs  merge.rs  notifications.rs  object.rs  options.rs  page.rs  parser.rs  requirement.rs  requirements.rs  retry.rs  reviews.rs  schedule.rs  search.rs  seeder.rs  select.rs  server.rs  state.rs  subcommand.rs  subscriptions.rs  user.rs  (+2 more)
tools/: parse_reqs.py  pyproject.toml
tools/changelog-gen/: Cargo.toml  README.md  justfile  prompt.txt
tools/changelog-gen/src/: main.rs
tools/changelog-generator/: Cargo.toml  README.md  justfile  prompt.txt
tools/changelog-generator/src/: main.rs
tools/course-average-fetcher/: README.md  main.py  pyproject.toml
tools/course-avg-parser/: README.md  main.py  pyproject.toml
tools/final-exam-schedule-parser/: Cargo.toml  foo.json
tools/final-exam-schedule-parser/src/: main.rs
tools/llm_data/: example.txt
tools/req-parser/: .env.example  README.md  failed.txt  justfile  main.py  pyproject.toml
tools/req-parser/llm_data/: example.txt
tools/req-parser/storage/: docstore.json  index_store.json  vector_store.json
tools/requirement-parser/: README.md  justfile  main.py  pyproject.toml
tools/rmp-scraper/: Pipfile  README.md  justfile  main.py
tools/scraper/: Cargo.toml
tools/scraper/src/: auth.rs  course_extractor.rs  loader.rs  main.rs  retry.rs  utils.rs  vsb_client.rs  vsb_extractor.rs
tools/scraper/test-samples/: catalog_course_listings_2025_2026.html  catalog_course_page_2025_2026_with_terms.html
tools/search-data-parser/: parser.py
tools/search-index-aggregator/: README.md  justfile  main.py  pyproject.toml
tools/search_data_parser/: parser.py  pyrightconfig.json
tools/storage/: docstore.json  index_store.json  vector_store.json
(+53 files in other folders)
