[package]
name = "server"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]
members = ["crates/*", "tools/changelog-generator", "tools/scraper"]

[workspace.dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }
typeshare = "1.0.4"

[dependencies]
anyhow = { workspace = true }
async-mongodb-session = { version = "3.0.0", default-features = false }
async-session = "3.0.0"
axum = { version = "0.7.9", features = ["json"] }
axum-extra = { version = "0.9.6", features = ["cookie", "typed-header"] }
axum-server = "0.6.0"
base64 = "0.21.7"
bytes = "1.10.1"
chrono = { workspace = true }
clap = { version = "4.5.38", features = ["derive"] }
db = { path = "crates/db" }
dotenv = "0.15.0"
env_logger = "0.10.2"
http = "1.3.1"
log = "0.4.27"
model = { path = "crates/model" }
oauth2 = "4.4.2"
rand = "0.9.1"
reqwest = { version = "0.11.27", default-features = false, features = [ "blocking", "json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.4.13", features = ["tracing", "limit", "buffer"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tower_governor = "0.2.0"
tracing = "0.1.41"
typeshare = { workspace = true }
url = "2.5.4"

[dev-dependencies]
hyper = { version = "1.6.0", features = ["server"] }
mockito = "1.7.0"
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
tower = "0.4.13"
