[package]
name = "server"
version = "0.0.0"
edition = "2024"
publish = false

[workspace]
members = ["crates/*", "tools/changelog-generator", "tools/scraper"]

[workspace.dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
typeshare = "1.0.4"
utoipa = { version = "5.4.0", features = ["axum_extras"] }

[dependencies]
anyhow = { workspace = true }
async-mongodb-session = { version = "3.0.0", default-features = false }
async-session = "3.0.0"
axum = { version = "0.8.4", features = ["json"] }
axum-extra = { version = "0.10.1", features = ["cookie", "typed-header"] }
base64 = "0.21.7"
bytes = "1.10.1"
chrono = { workspace = true }
clap = { version = "4.5.47", features = ["derive"] }
db = { path = "crates/db" }
dotenv = "0.15.0"
futures = "0.3.31"
http = "1.3.1"
model = { path = "crates/model" }
oauth2 = "4.4.2"
rand = "0.9.2"
reqwest = { version = "0.11.27", default-features = false, features = [ "blocking", "json", "rustls-tls"] }
rusoto_core = { version = "0.48.0", default-features = false, features = [ "rustls", ] }
rusoto_s3 = { version = "0.48.0", default-features = false, features = [ "rustls", ] }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.9"
tokio = { workspace = true }
tower = { version = "0.4.13", features = ["tracing", "limit", "buffer"] }
tower-http = { version = "0.5.2", features = ["cors", "fs", "trace"] }
tower_governor = "0.8.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
typeshare = { workspace = true }
url = "2.5.7"
utoipa = { workspace = true }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.0", features = ["v4"] }
walkdir = "2.5.0"

[dev-dependencies]
hyper = { version = "1.7.0", features = ["server"] }
mockito = "1.7.0"
pretty_assertions = "1.4.1"
tempfile = "3.22.0"
tower = { version = "0.4.13", features = ["util"] }
