[package]
name = "db"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.98"
bson = { version = "2.14.0", features = ["chrono-0_4"] }
chrono = "0.4.41"
combine = { path = "../combine" }
futures = "0.3.31"
itertools = "0.12.1"
lazy_static = "1.5.0"
log = "0.4.27"
model = { path = "../model" }
mongodb = "2.8.2"
serde = "1.0.219"
serde_json = "1.0.140"
stop-words = "0.7.2"
tokio = { version = "1.45.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
chrono = "0.4.41"
include_dir = "0.7.4"
pretty_assertions = "1.4.1"
regex = "1.11.1"
tempdir = "0.3.7"
