[package]
name = "db"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
bson = { version = "2.14.0", features = ["chrono-0_4"] }
chrono = { workspace = true }
combine = { path = "../combine" }
futures = "0.3.31"
itertools = "0.12.1"
lazy_static = "1.5.0"
log = "0.4.27"
model = { path = "../model" }
mongodb = "2.8.2"
serde = { workspace = true }
serde_json = { workspace = true }
stop-words = "0.7.2"
tokio = { workspace = true }

[dev-dependencies]
include_dir = "0.7.4"
pretty_assertions = "1.4.1"
regex = "1.11.1"
tempdir = "0.3.7"
