[package]
name = "extractor"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
chatgpt_rs = "1.1.11"
model = { path = "../../crates/model" }
scraper = "0.16.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"

[dev-dependencies]
include_dir = "0.7.3"
pretty_assertions = "1.3.0"
