[package]
name = "model"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
bson = { version = "2.6.1", features = ["chrono-0_4"] }
combine = { path = "../combine" }
derivative = "2.2.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
typeshare = "1.0.2"
