[package]
name = "changelog-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
async-openai = "0.21.0"
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
octocrab = "0.38.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.28.2", features = ["rt-multi-thread", "macros"] }
