[package]
name = "changelog-gen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-openai = "0.21.0"
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
octocrab = "0.38.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.1", features = ["rt-multi-thread", "macros"] }
