[package]
name = "changelog-generator"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
async-openai = "0.21.0"
chrono = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
octocrab = "0.38.0"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
