[package]
name = "changelog-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-openai = "0.21.0"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
dotenv = "0.15.0"
octocrab = "0.38.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
