[tool.poetry]
name = "mcgill-courses"
version = "0.1.0"
description = ""
authors = ["mcgill.courses <admin@mcgill.courses>"]
readme = "README.md"
packages = [{ include = "mcgill" }]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
openai = "^1.6.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
yapf = "^0.40.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
