[package]
name = "mcgill-courses-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.27"
model = { path = "../../crates/model" }
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [ "blocking", "json", "rustls-tls" ] }
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.140"

[dev-dependencies]
include_dir = "0.7.4"
mockito = "1.7.0"
pretty_assertions = "1.4.1"
