[package]
name = "mcgill-courses-scraper"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
model = { path = "../../crates/model" }
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", default-features = false, features = [ "blocking", "json", "rustls-tls" ] }
scraper = "0.23.1"
serde_json = { workspace = true }
thirtyfour = "0.35.0"
tokio = { workspace = true }
totp-rs = "5.7.0"

[dev-dependencies]
include_dir = "0.7.4"
mockito = "1.7.0"
pretty_assertions = "1.4.1"
