[package]
name = "mcgill-courses-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
model = { path = "../../crates/model" }
rand = "0.9.2"
rayon = "1.11.0"
regex = "1.11.2"
reqwest = { version = "0.12.23", default-features = false, features = [ "blocking", "json", "rustls-tls" ] }
scraper = "0.23.1"
serde = "1.0.219"
serde_json = "1.0.143"
thirtyfour = "0.35.0"
tokio = "1.47.1"
totp-rs = "5.7.0"

[dev-dependencies]
include_dir = "0.7.4"
mockito = "1.7.0"
pretty_assertions = "1.4.1"
